--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,14 @@
 buildscript {
     ext.kotlin_version = '1.3.31'
     repositories {
-        google()
+        mavenCentral()
         jcenter()
-        
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath "com.google.gms:google-services:4.3.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
